--- a/style.css
+++ b/style.css
@@ -55,3 +55,8 @@ nav{
 .collapsible-body{
 	background-color: white;
 }
+#stuff{
+	position: fixed;
+	box-shadow:0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	 -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
