--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav{
 	background-color: white;
 }
 #stuff{
-	position: fixed;
+	position: relative;
 	box-shadow:0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 	 -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
