--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ nav{
 	height: 100vh;
 	width: 100vw;
 	z-index: -1;
-	background-image: url("https://picsum.photos/200/300")
+	background-size: 100vw;
+	background-image:url("./materialize/img/img1.png");
 }
 #map2{
 	position: fixed;
@@ -50,7 +51,8 @@ nav{
 	height: 100vh;
 	width: 100vw;
 	z-index: -2;
-	background-image: url("https://picsum.photos/200/200")
+	background-size: 100vw;
+	background-image:url("./materialize/img/img2.png");
 }
 .collapsible-body{
 	background-color: white;
